<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.bolek.ftplclient.activities.ExplorerActivity">

    <item
        android:id="@+id/action_open"
        android:orderInCategory="100"
        android:title="@string/action_open"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_rename"
        android:orderInCategory="100"
        android:title="@string/action_rename"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_attach"
        android:orderInCategory="100"
        android:title="@string/action_attach"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_copy"
        android:orderInCategory="100"
        android:title="@string/action_copy"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_cut"
        android:orderInCategory="100"
        android:title="@string/action_cut"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never"/>

</menu>