<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.bolek.ftplclient.activities.ExplorerActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_show_hidden"
        android:orderInCategory="100"
        android:title="@string/action_show_hidden"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_disconnect"
        android:orderInCategory="100"
        android:title="@string/action_disconnect"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_create_dir"
        android:orderInCategory="100"
        android:title="@string/action_create_dir"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_create_file"
        android:orderInCategory="100"
        android:title="@string/action_create_file"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_paste"
        android:orderInCategory="100"
        android:title="@string/action_paste"
        app:showAsAction="never"/>

</menu>
